Upgrade to Java 10 and remove Google Guava