@@ -1,6 +1,5 @@
 package com.madadipouya.eris.integration.openstreetmap;
 
-import com.google.common.collect.ImmutableList;
 import com.madadipouya.eris.integration.openstreetmap.remote.response.OpenStreetMapLocationResponse;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.cache.annotation.Cacheable;
@@ -8,6 +7,8 @@ import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpHeaders;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
+
+import java.util.List;
 
 import static com.madadipouya.eris.configuration.CacheConfiguration.OPEN_STREET_CACHE;
 import static java.lang.String.format;
@@ -47,7 +48,7 @@ public class DefaultOpenStreetMapIntegration implements OpenStreetMapIntegration
     @Override
     public OpenStreetMapLocationResponse getReverseGeocoding(String latitude, String longitude) {
         HttpHeaders headers = new HttpHeaders();
-        headers.setAccept(ImmutableList.of(APPLICATION_JSON));
+        headers.setAccept(List.of(APPLICATION_JSON));
         headers.setContentType(APPLICATION_JSON);
         headers.set("User-Agent", "Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:58.0) Gecko/20100101 Firefox/58.0");
         HttpEntity<String> entity = new HttpEntity<>("parameters", headers);
